@@ -12,15 +12,18 @@ class ReferralDetailsScreen extends Component {
     super()
     this.state = {
       referral: {},
-      appliers: [],
     }
+  }
+
+  async triggerRefresh(referralId) {
+    const appliers = await BackendConnector.getReferralAppliers(referralId)
+    this.setState({ appliers: appliers })
   }
 
   async componentDidMount() {
     const referral = this.props.navigation.getParam('referral', {})
     this.setState({ referral: referral })
-    const appliers = await BackendConnector.getReferralAppliers(referral.referralId)
-    this.setState({ appliers: appliers })
+    await this.triggerRefresh(referral.referralId)
   }
 
   async showJobDetails(jobId) {
@@ -30,28 +33,27 @@ class ReferralDetailsScreen extends Component {
 
   render() {
     const renderDetails = (referral) =>
-      <View style={Styles.listScreen}>
-        <ScrollView contentContainerStyle={Styles.formScreen}>
-          <Avatar rounded medium source={{ uri: referral.userImageUrl }}/>
-          <Text style={Styles.normalText}>{referral.username}</Text>
-          <Text style={Styles.titleText}>{referral.title}</Text>
-          <Text style={Styles.subtitleText}>{referral.companyName + ', ' + referral.city}</Text>
-          <Icon name={'info'} onPress={() => this.showJobDetails(referral.jobId)}/>
-          <Text style={Styles.headerText}>Referral description:</Text>
-          <Text style={Styles.normalText}>{referral.description}</Text>
-          <Text style={Styles.headerText}>Referral bonus: {referral.referralBonus}</Text>
-          <Text style={Styles.headerText}>Your bonus part: {getBonusPart(referral)}</Text>
-          <Text style={Styles.headerText}>Your bonus percentage: {referral.referralBonusPercentage}</Text>
-          <Text style={Styles.headerText}>Closing date: {formatDate(referral.closingDate)}</Text>
-          <Text style={Styles.headerText}>Already applied:</Text>
-          {this.renderAppliers()}
-          {this.renderApplicationsButton(this.state.referral)}
-        </ScrollView>
-      </View>
+      <ScrollView contentContainerStyle={Styles.scrollDetailsScreen}>
+        <Avatar rounded medium source={{ uri: referral.userImageUrl }}/>
+        <Text style={Styles.normalText}>{referral.username}</Text>
+        <Text style={Styles.titleText}>{referral.title}</Text>
+        <Text style={Styles.subtitleText}>{referral.companyName + ', ' + referral.city}</Text>
+        <Icon name={'info'} onPress={() => this.showJobDetails(referral.jobId)}/>
+        <Text style={Styles.headerText}>Referral description:</Text>
+        <Text style={Styles.normalText}>{referral.description}</Text>
+        <Text style={Styles.headerText}>Referral bonus: {referral.referralBonus}</Text>
+        <Text style={Styles.headerText}>Your bonus part: {getBonusPart(referral)}</Text>
+        <Text style={Styles.headerText}>Your bonus percentage: {referral.referralBonusPercentage}</Text>
+        <Text style={Styles.headerText}>Closing date: {formatDate(referral.closingDate)}</Text>
+        <Text style={Styles.headerText}>Already applied:</Text>
+        {this.renderAppliers()}
+        {this.renderApplicationsButton(this.state.referral)}
+        {this.renderApplyButton(this.state.referral)}
+      </ScrollView>
     return renderDetails(this.state.referral)
   }
 
-  renderAppliers = () => this.state.appliers.map((applier) =>
+  renderAppliers = () => emptyIfNull(this.state.appliers).map((applier) =>
     <View key={applier.id} style={appliersViewStyle}>
       <Avatar rounded small source={{ uri: applier.imageUrl }}/>
       <Text style={Styles.normalText}>{applier.username}</Text>
@@ -63,11 +65,26 @@ class ReferralDetailsScreen extends Component {
       onPress={() => this.props.navigation.navigate('Applications', { referralId: referral.referralId })}/>
     : undefined
 
+  renderApplyButton = (referral) => this.userCanApply(referral) ?
+    <Button
+      title={'Apply'}
+      onPress={() => this.props.navigation.navigate('Apply', {
+        referralId: referral.referralId,
+        onReturn: async () => this.triggerRefresh(referral.referralId),
+      })}/>
+    : undefined
+
+  userCanApply = (referral) =>
+    this.state.appliers
+    && !this.state.appliers.find(this.isCurrentUser)
+    && referral.authorId !== BackendConnector.userId
+
+  isCurrentUser = (applier) => applier.id === BackendConnector.userId
 }
 
 export const appliersViewStyle = {
   flex: 1,
-  padding: 16,
+  padding: 8,
   alignItems: 'center',
   flexDirection: 'row',
 }
@@ -75,5 +92,7 @@ export const appliersViewStyle = {
 ReferralDetailsScreen.propTypes = {
   navigation: PropTypes.object.isRequired,
 }
+
+const emptyIfNull = (array) => array ? array : []
 
 export default ReferralDetailsScreen
